0.003
  - Add some documentation.

0.002
  - Deal with changes in upstream Message::Passing

0.001
  - Initial barely working version.
